--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     <header class="header">
         logo
         <nav>
-            <ul>
-                <li>
+            <ul class="header__nav-list">
+                <li class="header__nav-item">
                     <a href="#">catalog</a>
+                </li>
+                <li class="header__nav-item">
                     <a href="#">photo</a>
+                </li>
+                <li class="header__nav-item">
                     <a href="#">contatcs</a>
                 </li>
             </ul>
@@ -46,13 +50,19 @@
             </ul>
         </section>
     </main>
-    <div class="footer">
-        <div>
-            <a href="#">link</a>
-            <a href="#">link</a>
-            <a href="#">link</a>
-        </div>
-    </div>
+    <footer class="footer">
+        <ul>
+            <li>
+                <a href="#">link</a>
+            </li>
+            <li>
+                <a href="#">link</a>
+            </li>
+            <li>
+                <a href="#">link</a>
+            </li>
+        </ul>
+    </footer>
 </body>
 
 </html>
